--- a/index.html
+++ b/index.html
@@ -21,11 +21,61 @@
           </div>
           <div class="nav-right col text-capitalize">
             <ul>
-              <li><a href="">Tariffazione</a></li>
-              <li><a href="">conti</a></li>
-              <li><a href="">prodotti</a></li>
-              <li><a href="">azienda</a></li>
-              <li><a href="">aiuto</a></li>
+              <li>
+                <a href="">Tariffazione</a>
+                <div class="my_dropdown">
+                  <ul>
+                    <li><a href="">Lorem</a></li>
+                    <li><a href="">Lorem</a></li>
+                    <li><a href="">Lorem</a></li>
+                    <li><a href="">Lorem</a></li>
+                  </ul>
+                </div>
+              </li>
+              <li>
+                <a href="">conti</a>
+                <div class="my_dropdown">
+                  <ul>
+                    <li><a href="">Lorem</a></li>
+                    <li><a href="">Lorem</a></li>
+                    <li><a href="">Lorem</a></li>
+                    <li><a href="">Lorem</a></li>
+                  </ul>
+                </div>
+              </li>
+              <li>
+                <a href="">prodotti</a>
+                <div class="my_dropdown">
+                  <ul>
+                    <li><a href="">Lorem</a></li>
+                    <li><a href="">Lorem</a></li>
+                    <li><a href="">Lorem</a></li>
+                    <li><a href="">Lorem</a></li>
+                  </ul>
+                </div>
+              </li>
+              <li>
+                <a href="">azienda</a>
+                <div class="my_dropdown">
+                  <ul>
+                    <li><a href="">Lorem</a></li>
+                    <li><a href="">Lorem</a></li>
+                    <li><a href="">Lorem</a></li>
+                    <li><a href="">Lorem</a></li>
+                  </ul>
+                </div>
+              </li>
+              <li>
+                <a href="">aiuto</a>
+                <div class="my_dropdown">
+                  <ul>
+                    <li><a href="">Lorem</a></li>
+                    <li><a href="">Lorem</a></li>
+                    <li><a href="">Lorem</a></li>
+                    <li><a href="">Lorem</a></li>
+                  </ul>
+                </div>
+              </li>
               <li>
                 <select name="language" id="">
                   <option value="IT">IT</option>
