--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <script src="https://code.jquery.com/jquery-3.5.1.js" integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc=" crossorigin="anonymous"></script>
     <script src="js/main.js" charset="utf-8"></script>
   </head>
-  <body class='debug'>
+  <body class=''>
     <nav class="fixed-top">
       <div class="container">
         <div class="row">
@@ -19,10 +19,10 @@
               <li><a href="">business</a></li>
             </ul>
           </div>
-          <div class="nav-right col text-capitalize">
+          <div class="nav-right col-7 text-capitalize">
             <ul>
               <li>
-                <a href="">Tariffazione</a>
+                <a href="">Funzionalità</a>
                 <div class="my_dropdown">
                   <ul>
                     <li><a href="">Lorem</a></li>
@@ -33,35 +33,29 @@
                 </div>
               </li>
               <li>
-                <a href="">conti</a>
+                <a href="">abbonamenti</a>
                 <div class="my_dropdown">
                   <ul>
-                    <li><a href="">Lorem</a></li>
-                    <li><a href="">Lorem</a></li>
-                    <li><a href="">Lorem</a></li>
-                    <li><a href="">Lorem</a></li>
+                    <li><a href="">Standard</a></li>
+                    <li><a href="">Premium</a></li>
+                    <li><a href="">Metal</a></li>
+                    <li><a href="">Confronta i piani</a></li>
                   </ul>
                 </div>
               </li>
               <li>
-                <a href="">prodotti</a>
+                <a href="">chi siamo</a>
                 <div class="my_dropdown">
                   <ul>
-                    <li><a href="">Lorem</a></li>
-                    <li><a href="">Lorem</a></li>
-                    <li><a href="">Lorem</a></li>
-                    <li><a href="">Lorem</a></li>
-                  </ul>
-                </div>
-              </li>
-              <li>
-                <a href="">azienda</a>
-                <div class="my_dropdown">
-                  <ul>
-                    <li><a href="">Lorem</a></li>
-                    <li><a href="">Lorem</a></li>
-                    <li><a href="">Lorem</a></li>
-                    <li><a href="">Lorem</a></li>
+                    <li><a href="">Chi siamo</a></li>
+                    <li><a href="">Blog</a></li>
+                    <li><a href="">Leadership</a></li>
+                    <li><a href="">Affiliate</a></li>
+                    <li><a href="">Influencer</a></li>
+                    <li><a href="">Lavora con noi</a></li>
+                    <li><a href="">Cultura</a></li>
+                    <li><a href="">Diversità e inclusione</a></li>
+                    <li><a href="">Contatto</a></li>
                   </ul>
                 </div>
               </li>
@@ -69,10 +63,11 @@
                 <a href="">aiuto</a>
                 <div class="my_dropdown">
                   <ul>
-                    <li><a href="">Lorem</a></li>
-                    <li><a href="">Lorem</a></li>
-                    <li><a href="">Lorem</a></li>
-                    <li><a href="">Lorem</a></li>
+                    <li><a href="">Centro assistenza</a></li>
+                    <li><a href="">Community</a></li>
+                    <li><a href="">Sicurezza</a></li>
+                    <li><a href="">Stato di sistema</a></li>
+                    <li><a href="">API sviluppatore</a></li>
                   </ul>
                 </div>
               </li>
@@ -81,8 +76,8 @@
                   <option value="IT">IT</option>
                 </select>
               </li>
-              <button class="btn my_btn" type="button" name="button">Scarica l'app</button>
             </ul>
+            <button class="btn my_btn" type="button" name="button">Scarica l'app</button>
           </div>
         </div>
       </div>
