--- a/index.html
+++ b/index.html
@@ -15,59 +15,59 @@
           <div class="nav-left col text-uppercase">
             <img src="img/revolut_logo.png" alt="revolut">
             <ul>
-              <li><a href="">PERSONALE</a></li>
-              <li><a href="">business</a></li>
+              <li><a href="#">PERSONALE</a></li>
+              <li><a href="#">business</a></li>
             </ul>
           </div>
           <div class="nav-right col-7 text-capitalize">
             <ul>
               <li>
-                <a href="">Funzionalità</a>
+                <a href="#">Funzionalità</a>
                 <div class="my_dropdown">
                   <ul>
-                    <li><a href="">Lorem</a></li>
-                    <li><a href="">Lorem</a></li>
-                    <li><a href="">Lorem</a></li>
-                    <li><a href="">Lorem</a></li>
+                    <li><a href="#">Lorem</a></li>
+                    <li><a href="#">Lorem</a></li>
+                    <li><a href="#">Lorem</a></li>
+                    <li><a href="#">Lorem</a></li>
                   </ul>
                 </div>
               </li>
               <li>
-                <a href="">abbonamenti</a>
+                <a href="#">abbonamenti</a>
                 <div class="my_dropdown">
                   <ul>
-                    <li><a href="">Standard</a></li>
-                    <li><a href="">Premium</a></li>
-                    <li><a href="">Metal</a></li>
-                    <li><a href="">Confronta i piani</a></li>
+                    <li><a href="#">Standard</a></li>
+                    <li><a href="#">Premium</a></li>
+                    <li><a href="#">Metal</a></li>
+                    <li><a href="#">Confronta i piani</a></li>
                   </ul>
                 </div>
               </li>
               <li>
-                <a href="">chi siamo</a>
+                <a href="#">chi siamo</a>
                 <div class="my_dropdown">
                   <ul>
-                    <li><a href="">Chi siamo</a></li>
-                    <li><a href="">Blog</a></li>
-                    <li><a href="">Leadership</a></li>
-                    <li><a href="">Affiliate</a></li>
-                    <li><a href="">Influencer</a></li>
-                    <li><a href="">Lavora con noi</a></li>
-                    <li><a href="">Cultura</a></li>
-                    <li><a href="">Diversità e inclusione</a></li>
-                    <li><a href="">Contatto</a></li>
+                    <li><a href="#">Chi siamo</a></li>
+                    <li><a href="#">Blog</a></li>
+                    <li><a href="#">Leadership</a></li>
+                    <li><a href="#">Affiliate</a></li>
+                    <li><a href="#">Influencer</a></li>
+                    <li><a href="#">Lavora con noi</a></li>
+                    <li><a href="#">Cultura</a></li>
+                    <li><a href="#">Diversità e inclusione</a></li>
+                    <li><a href="#">Contatto</a></li>
                   </ul>
                 </div>
               </li>
               <li>
-                <a href="">aiuto</a>
+                <a href="#">aiuto</a>
                 <div class="my_dropdown">
                   <ul>
-                    <li><a href="">Centro assistenza</a></li>
-                    <li><a href="">Community</a></li>
-                    <li><a href="">Sicurezza</a></li>
-                    <li><a href="">Stato di sistema</a></li>
-                    <li><a href="">API sviluppatore</a></li>
+                    <li><a href="#">Centro assistenza</a></li>
+                    <li><a href="#">Community</a></li>
+                    <li><a href="#">Sicurezza</a></li>
+                    <li><a href="#">Stato di sistema</a></li>
+                    <li><a href="#">API sviluppatore</a></li>
                   </ul>
                 </div>
               </li>
